[package]
name = "activityrust"
version = "0.1.0"
authors = ["Lyra <teromene@teromene.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version="*", features=["serde"] }
chrono = { version="*" }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "*"
ambassador = "*"
